Revert url-encoder change